# new_modules

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
src/: settings.py
src/decorators/: log.py
src/masks/: constants.py  decorators.py  funcs.py  validators.py
src/models/: operation.py
src/processing/: constants.py  funcs.py
src/utils/: currency_converter.py  json_parser.py  models_converters.py
src/widget/: funcs.py  utils.py
tests/test_decorators/: test_log.py
tests/test_masks/: test_funcs.py
tests/test_processing/: test_funcs.py
tests/test_utils/: test_currency_converter.py
tests/test_widget/: test_funcs.py
